added audio, added turntaking

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
             <button id="reset-button">RESET</button><br>
             NUMBER OF RESETS: <span id="num-resets">0</span>
         </div>
-        <audio controls autoplay loop src="https://freesound.org/data/previews/472/472880_9890183-lq.mp3" type="audio/mpeg">
+        <audio class="audio" id="ambience" loop>
+            <source src="https://freesound.org/data/previews/472/472880_9890183-lq.mp3" type="audio/mpeg">
+            <source src="https://freesound.org/data/previews/472/472880_9890183-lq.ogg" type="audio/ogg">
+        </audio>
+        <audio class="audio" id="shot-audio">
+            <source src="https://freesound.org/data/previews/461/461092_9589340-lq.mp3" type="audio/mpeg">
+            <source src="https://freesound.org/data/previews/461/461092_9589340-lq.ogg" type="audio/ogg">
+        </audio>
+        <audio class="audio" id="goal-audio">
+            <source src="https://freesound.org/data/previews/324/324245_4157407-lq.mp3" type="audio/mpeg">
+            <source src="https://freesound.org/data/previews/324/324245_4157407-lq.ogg" type="audio/ogg">
         </audio>
     </header>
     <main>
